--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -12,7 +12,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>622</width>
+            <width>618</width>
             <height>543</height>
         </rect>
     </property>
@@ -126,6 +126,17 @@
                                 <property stdset="1">
                                     <name>text</name>
                                     <string>&amp;Import</string>
+                                </property>
+                            </widget>
+                            <widget>
+                                <class>QPushButton</class>
+                                <property stdset="1">
+                                    <name>name</name>
+                                    <cstring>BNimportPFX</cstring>
+                                </property>
+                                <property stdset="1">
+                                    <name>text</name>
+                                    <string>Import PFX (PKCS#12)</string>
                                 </property>
                             </widget>
                             <widget>
