--- a/ui/PassRead.ui
+++ b/ui/PassRead.ui
@@ -17,7 +17,7 @@
     </property>
     <property stdset="1">
         <name>caption</name>
-        <string>Passwort</string>
+        <string>Password</string>
     </property>
     <vbox>
         <property stdset="1">
