--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -12,8 +12,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>614</width>
-            <height>543</height>
+            <width>779</width>
+            <height>534</height>
         </rect>
     </property>
     <property stdset="1">
@@ -34,10 +34,6 @@
             <property stdset="1">
                 <name>name</name>
                 <cstring>MainTab</cstring>
-            </property>
-            <property stdset="1">
-                <name>tabShape</name>
-                <enum>Rounded</enum>
             </property>
             <widget>
                 <class>QWidget</class>
@@ -835,6 +831,109 @@
                         </vbox>
                     </widget>
                 </hbox>
+            </widget>
+            <widget>
+                <class>QWidget</class>
+                <property stdset="1">
+                    <name>name</name>
+                    <cstring>unnamed</cstring>
+                </property>
+                <attribute>
+                    <name>title</name>
+                    <string>Settings</string>
+                </attribute>
+                <grid>
+                    <property stdset="1">
+                        <name>margin</name>
+                        <number>11</number>
+                    </property>
+                    <property stdset="1">
+                        <name>spacing</name>
+                        <number>6</number>
+                    </property>
+                    <widget row="1"  column="0" >
+                        <class>QGroupBox</class>
+                        <property stdset="1">
+                            <name>name</name>
+                            <cstring>GroupBox1</cstring>
+                        </property>
+                        <property stdset="1">
+                            <name>title</name>
+                            <string>Distinguished Name</string>
+                        </property>
+                        <grid>
+                            <property stdset="1">
+                                <name>margin</name>
+                                <number>11</number>
+                            </property>
+                            <property stdset="1">
+                                <name>spacing</name>
+                                <number>6</number>
+                            </property>
+                            <widget row="0"  column="0" >
+                                <class>QLineEdit</class>
+                                <property stdset="1">
+                                    <name>name</name>
+                                    <cstring>LineEdit1</cstring>
+                                </property>
+                            </widget>
+                            <widget row="0"  column="1" >
+                                <class>QLineEdit</class>
+                                <property stdset="1">
+                                    <name>name</name>
+                                    <cstring>LineEdit2</cstring>
+                                </property>
+                            </widget>
+                            <widget row="0"  column="2" >
+                                <class>QLineEdit</class>
+                                <property stdset="1">
+                                    <name>name</name>
+                                    <cstring>LineEdit3</cstring>
+                                </property>
+                            </widget>
+                            <widget row="1"  column="0"  rowspan="1"  colspan="3" >
+                                <class>QListView</class>
+                                <property stdset="1">
+                                    <name>name</name>
+                                    <cstring>ListView1</cstring>
+                                </property>
+                            </widget>
+                            <widget row="0"  column="3" >
+                                <class>QPushButton</class>
+                                <property stdset="1">
+                                    <name>name</name>
+                                    <cstring>PushButton32</cstring>
+                                </property>
+                                <property stdset="1">
+                                    <name>text</name>
+                                    <string>add</string>
+                                </property>
+                            </widget>
+                            <widget row="1"  column="3" >
+                                <class>QPushButton</class>
+                                <property stdset="1">
+                                    <name>name</name>
+                                    <cstring>PushButton31</cstring>
+                                </property>
+                                <property stdset="1">
+                                    <name>text</name>
+                                    <string>remove</string>
+                                </property>
+                            </widget>
+                        </grid>
+                    </widget>
+                    <widget row="0"  column="0" >
+                        <class>QPushButton</class>
+                        <property stdset="1">
+                            <name>name</name>
+                            <cstring>PushButton33</cstring>
+                        </property>
+                        <property stdset="1">
+                            <name>text</name>
+                            <string>Change password</string>
+                        </property>
+                    </widget>
+                </grid>
             </widget>
         </widget>
         <widget>
