--- a/ui/ExportKey.ui
+++ b/ui/ExportKey.ui
@@ -11,13 +11,13 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>587</width>
+            <width>575</width>
             <height>375</height>
         </rect>
     </property>
     <property stdset="1">
         <name>caption</name>
-        <string>Key export</string>
+        <string>ExportKey_UI</string>
     </property>
     <vbox>
         <property stdset="1">
@@ -159,7 +159,7 @@
                     </property>
                     <property stdset="1">
                         <name>text</name>
-                        <string>Filename:</string>
+                        <string>Filename</string>
                     </property>
                 </widget>
                 <widget>
@@ -240,7 +240,7 @@ PKCS#8 is an encrypted official Key-exchange format</string>
                     </property>
                     <property stdset="1">
                         <name>text</name>
-                        <string>Export Format:</string>
+                        <string>Export Format</string>
                     </property>
                 </widget>
                 <widget>
@@ -434,6 +434,7 @@ PKCS#8 is an encrypted official Key-exchange format</string>
     <slot access="public">canEncrypt()</slot>
     <slot access="public">chooseFile()</slot>
     <slot access="public">formatChanged()</slot>
+    <slot access="public">setTinyCAfname()</slot>
 </connections>
 <tabstops>
     <tabstop>filename</tabstop>
