Country is State or Province

--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -810,7 +810,7 @@ Empy, CA, client, server</string>
                                 </property>
                                 <property stdset="1">
                                     <name>text</name>
-                                    <string>Country</string>
+                                    <string>State or Province</string>
                                 </property>
                             </widget>
                             <widget row="2"  column="1" >
