SPKAC enhancement patch from W. Glas added Mainwindow menu bar added

--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -12,8 +12,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>804</width>
-            <height>534</height>
+            <width>822</width>
+            <height>521</height>
         </rect>
     </property>
     <property stdset="1">
@@ -29,6 +29,27 @@
             <name>spacing</name>
             <number>6</number>
         </property>
+        <spacer>
+            <property>
+                <name>name</name>
+                <cstring>Spacer8_2</cstring>
+            </property>
+            <property stdset="1">
+                <name>orientation</name>
+                <enum>Vertical</enum>
+            </property>
+            <property stdset="1">
+                <name>sizeType</name>
+                <enum>Minimum</enum>
+            </property>
+            <property>
+                <name>sizeHint</name>
+                <size>
+                    <width>20</width>
+                    <height>20</height>
+                </size>
+            </property>
+        </spacer>
         <widget>
             <class>QTabWidget</class>
             <property stdset="1">
@@ -840,66 +861,6 @@
                 </hbox>
             </widget>
         </widget>
-        <widget>
-            <class>QLayoutWidget</class>
-            <property stdset="1">
-                <name>name</name>
-                <cstring>Layout1</cstring>
-            </property>
-            <hbox>
-                <property stdset="1">
-                    <name>margin</name>
-                    <number>0</number>
-                </property>
-                <property stdset="1">
-                    <name>spacing</name>
-                    <number>6</number>
-                </property>
-                <widget>
-                    <class>QLabel</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>copyright</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>text</name>
-                        <string>(c) 2002 by christian@hohnstaedt.de</string>
-                    </property>
-                </widget>
-                <spacer>
-                    <property>
-                        <name>name</name>
-                        <cstring>Spacer2</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>orientation</name>
-                        <enum>Horizontal</enum>
-                    </property>
-                    <property stdset="1">
-                        <name>sizeType</name>
-                        <enum>Expanding</enum>
-                    </property>
-                    <property>
-                        <name>sizeHint</name>
-                        <size>
-                            <width>20</width>
-                            <height>20</height>
-                        </size>
-                    </property>
-                </spacer>
-                <widget>
-                    <class>QPushButton</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>quitApp</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>text</name>
-                        <string>E&amp;xit</string>
-                    </property>
-                </widget>
-            </hbox>
-        </widget>
     </vbox>
 </widget>
 <customwidgets>
@@ -1007,6 +968,5 @@
     <tabstop>BNserverTemp</tabstop>
     <tabstop>BNchangeTemp</tabstop>
     <tabstop>BNdeleteTemp</tabstop>
-    <tabstop>quitApp</tabstop>
 </tabstops>
 </UI>
